kubernetes/template.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: username/order:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: Delivery
  labels:
    app: Delivery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Delivery
  template:
    metadata:
      labels:
        app: Delivery
    spec:
      containers:
        - name: Delivery
          image: username/Delivery:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  labels:
    app: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: username/inventory:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: Notification
  labels:
    app: Notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Notification
  template:
    metadata:
      labels:
        app: Notification
    spec:
      containers:
        - name: Notification
          image: username/Notification:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: Payment
  labels:
    app: Payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Payment
  template:
    metadata:
      labels:
        app: Payment
    spec:
      containers:
        - name: Payment
          image: username/Payment:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ViewPage
  labels:
    app: ViewPage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ViewPage
  template:
    metadata:
      labels:
        app: ViewPage
    spec:
      containers:
        - name: ViewPage
          image: username/ViewPage:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5


---


apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: order


---


apiVersion: v1
kind: Service
metadata:
  name: Delivery
  labels:
    app: Delivery
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: Delivery


---


apiVersion: v1
kind: Service
metadata:
  name: inventory
  labels:
    app: inventory
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: inventory


---


apiVersion: v1
kind: Service
metadata:
  name: Notification
  labels:
    app: Notification
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: Notification


---


apiVersion: v1
kind: Service
metadata:
  name: Payment
  labels:
    app: Payment
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: Payment


---


apiVersion: v1
kind: Service
metadata:
  name: ViewPage
  labels:
    app: ViewPage
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: ViewPage

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: team
  annotations: 
    kubernetes.io/ingress.class: "nginx"
spec: 
  rules: 
    - host: ""
      http: 
        paths: 
          - path: /orders
            pathType: Prefix
            backend: 
              serviceName: order
              servicePort: 8080
          - path: /deliveries
            pathType: Prefix
            backend: 
              serviceName: delivery
              servicePort: 8080
          - path: /inventories
            pathType: Prefix
            backend: 
              serviceName: inventory
              servicePort: 8080
          - path: /notifications
            pathType: Prefix
            backend: 
              serviceName: notification
              servicePort: 8080
          - path: /payments
            pathType: Prefix
            backend: 
              serviceName: payment
              servicePort: 8080
          - path: /viewPages
            pathType: Prefix
            backend: 
              serviceName: viewPage
              servicePort: 8080
